--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.BBSA"
         tools:targetApi="31">
         <activity
-            android:name=".ui.main.AdminMainActivity"
+            android:name=".ui.admin.main.AdminMainActivity"
             android:exported="false" />
         <activity
             android:name=".ui.auth.otp.OtpActivity"
@@ -31,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.main.CustomersMainActivity"
+            android:name=".ui.customers.main.CustomersMainActivity"
             android:exported="false" />
     </application>
 
